[package]
name = "http-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = { version = "0.6.20" }

serde = "1.0.188"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"

volo-gen = { path = "../volo-redis/volo-gen" }
volo_redis = { path = "../volo-redis" }
tracing = "0.1.37"
once_cell = "1.18.0"
lazy_static = "1.4.0"
faststr = "0.2.11"
axum-macros = "0.3.8"
reqwest = "0.11.20"
